# ofn-ddos-detector

./: .gitignore  COMMERCIAL.md  DOKUMENTACJA_DDOS_OFN.md  LICENSE  README.md  pyproject.toml  run.py
ddos_ofn/: __init__.py  aggregator.py  baseline.py  comparators.py  config.py  datasets.py  detector.py  ga_optimize.py  metrics.py  ofn_builder.py  schemas.py  simulation.py
pyofn/: __init__.py  core.py  shapes.py  viz.py
scripts/: benchmark_models.py  dashboard.py  eval_ddos.py  run_stream_demo.py  train_ddos_ga.py
tests/: test_aggregation.py  test_comparators.py  test_datasets.py  test_detector_rules.py  test_direction_switch.py  test_ga_optimize.py  test_metrics.py  test_ofn_builder.py  test_simulation.py
