[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofn-ddos-detector"
version = "0.3.0"
description = "OFN-based DDoS detection with GA optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
